ci: update CI workflow and testing scripts to use Vitest projects
- Simplified test commands in CI workflow for unit, integration, setup, performance, and smoke tests.
- Added new test scripts for performance and smoke tests in package.json.
- Updated Vitest configuration to define projects for different test types and adjusted coverage thresholds.

--- a/package.json
+++ b/package.json
@@ -23,13 +23,22 @@
     "build:prod": "NODE_ENV=production vite build",
     "prerelease": "npm run test && npm run build:prod",
     "release": "npm run prerelease && git add dist/ && git commit -m 'Build artifacts'",
-    "test": "vitest run --coverage",
-    "test:unit": "vitest run --coverage --exclude='tests/integration/**' --exclude='**/*.int.test.mjs'",
-    "test:integration": "vitest run tests/integration/",
-    "test:setup": "vitest run tests/setup/",
-    "test:watch": "vitest",
+    "test": "vitest run --coverage --project unit --project integration --project setup --project performance --project smoke",
+    "test:all": "vitest run --project unit --project integration --project setup --project performance --project smoke",
+    "test:unit": "vitest run --project unit",
+    "test:integration": "vitest run --project integration",
+    "test:setup": "vitest run --project setup",
+    "test:performance": "vitest run --project performance",
+    "test:smoke": "vitest run --project smoke",
     "test:functional": "echo 'Functional tests not configured' && exit 0",
-    "test:performance": "echo 'Performance tests not configured' && exit 0",
+    "test:watch": "vitest --project unit",
+    "test:watch:integration": "vitest --project integration",
+    "test:watch:setup": "vitest --project setup",
+    "test:watch:performance": "vitest --project performance",
+    "test:watch:smoke": "vitest --project smoke",
+    "test:watch:functional": "echo 'Functional tests cannot be run in watch mode' && exit 0",
+    "lint": "eslint . --ext .js,.mjs",
+    "lint:fix": "eslint . --ext .js,.mjs --fix",
     "validate:container-config": "node ./scripts/validate-container-config.mjs"
   },
   "dependencies": {
