chore: rename workflow and update artifact cleanup steps
- Change workflow name from "Delete Tests" to "Cleanup Vitest Artifacts"
- Update triggered workflows from "Run Tests" to "CI Checks"
- Modify checkout action version from v2 to v4
- Remove unnecessary steps for deleting test directories and committing changes
- Focus cleanup on removing Vitest coverage artifacts

--- a/.github/workflows/delete-tests.yml
+++ b/.github/workflows/delete-tests.yml
@@ -1,34 +1,21 @@
-name: Delete Tests
+name: Cleanup Vitest Artifacts
 
 on:
   workflow_run:
-    workflows: ["Run Tests"]
+    workflows: ["CI Checks"]
     types:
       - completed
 
 jobs:
-  delete-tests:
+  cleanup:
     if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    - name: Remove test directories
+    - name: Remove Vitest coverage artifacts
       run: |
-        rm -rf tests
-
-    - name: Commit changes
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add .
-        git commit -m 'Remove tests'
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Delete integration tests
-      run: |
-        rm -rf tests/integration
+        rm -rf coverage
+        rm -rf .vitest
