--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "babel-plugin-transform-import-meta": "^2.3.3",
     "cypress": "^15.0.0",
     "eslint": "^8.57.1",
-    "jest": "^29.7.0",
+    "csslint": "^1.0.5",
     "jsdom": "^26.1.0",
     "jsonc-parser": "^3.3.1",
     "rewire": "^7.0.0",
-    "vite": "^7.1.1"
+    "vite": "^7.1.1",
+    "vitest": "^3.2.4",
+    "semver": "^7.3.8"
   },
   "scripts": {
     "dev": "node ./scripts/dev/buildAndDeploy.mjs",
@@ -32,11 +34,8 @@
     "validate:container-config": "node ./scripts/validate-container-config.mjs"
   },
   "dependencies": {
-    "csslint": "^1.0.5",
     "dayjs": "^1.11.13",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "validator": "^13.15.0",
-    "zod": "^3.24.4"
+    "lodash": "^4.17.21"
   }
 }
