refactor: Update path aliases for baseClasses in configuration files
- Added '@baseClasses' alias in jsconfig.json, vite.config.mjs, and vitest.config.mjs
- Improved code organization and module resolution for better maintainability

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-        "@docker/*": ["docker/*"],
+      "@docker/*": ["docker/*"],
+      "@baseClasses/*": ["src/baseClasses/*"],
       "@config": ["src/config/config.mjs"],
       "@constants": ["src/config/constants.mjs"],
       "@manifest": ["src/config/manifest.mjs"],
