--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
+  "name": "foundryvtt-over-my-head",
+  "version": "0.1.0",
+  "description": "A Foundry VTT module to enhance the user interface and experience.",
+  "main": "dist/index.js",
+  "type": "module",
+  "author": "Andrea Pandolfo",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-json": "^6.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-import-meta": "^2.3.3",
-    "cypress": "^15.0.0",
-    "eslint": "^8.57.1",
     "csslint": "^1.0.5",
-    "jsdom": "^26.1.0",
+    "cypress": "^15.0.0",
+    "eslint": "^9.36.0",
+    "jsdom": "^27.0.0",
     "jsonc-parser": "^3.3.1",
-    "rewire": "^7.0.0",
+    "semver": "^7.3.8",
     "vite": "^7.1.1",
-    "vitest": "^3.2.4",
-    "semver": "^7.3.8"
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   },
   "scripts": {
     "dev": "node ./scripts/dev/buildAndDeploy.mjs",
@@ -42,10 +54,5 @@
     "lint": "eslint . --ext .js,.mjs",
     "lint:fix": "eslint . --ext .js,.mjs --fix",
     "validate:container-config": "node ./scripts/validate-container-config.mjs"
-  },
-  "dependencies": {
-    "dayjs": "^1.11.13",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
   }
 }
