--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-json": "^6.1.0",
+    "@types/estree": "^1.0.8",
+    "@types/node": "^24.5.2",
+    "@types/sinon": "^17.0.4",
+    "@types/sizzle": "^2.3.10",
     "@vitest/coverage-v8": "^3.2.4",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
