chore: update package.json with new dependencies and scripts
- Added new dependencies: glob, husky, lcov, lint-staged, markdownlint-cli, minimatch, mock-fs, prettier, secretlint
- Updated lint and format scripts to use custom wrapper scripts
- Added markdown linting and formatting scripts
- Introduced spellcheck script for markdown and text files
- Configured husky for pre-commit hooks with lint-staged

--- a/package.json
+++ b/package.json
@@ -16,6 +16,15 @@
     "@vitest/coverage-v8": "^3.2.4",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "glob": "^11.0.3",
+    "husky": "^9.1.7",
+    "lcov": "^1.16.0",
+    "lint-staged": "^16.2.0",
+    "markdownlint-cli": "^0.45.0",
+    "minimatch": "^10.0.3",
+    "mock-fs": "^5.5.0",
+    "prettier": "^3.0.0",
+    "secretlint": "^11.2.4",
     "csslint": "^1.0.5",
     "cypress": "^15.0.0",
     "eslint": "^9.36.0",
@@ -50,8 +59,16 @@
     "test:watch:performance": "vitest --project performance",
     "test:watch:smoke": "vitest --project smoke",
     "test:watch:functional": "echo 'Functional tests cannot be run in watch mode' && exit 0",
-    "lint": "eslint . --ext .js,.mjs",
-    "lint:fix": "eslint . --ext .js,.mjs --fix",
+    "lint": ".dev/scripts/utilities/lint-wrapper.sh",
+    "format": ".dev/scripts/utilities/format-wrapper.sh",
+    "lint:md": "markdownlint '**/*.md' --ignore-path .markdownlintignore",
+    "format:md": "prettier --write '**/*.md' '!node_modules/**'",
+    "format:json": "prettier --write '**/*.json' '!node_modules/**'",
+    "spellcheck": "cspell '**/*.md' '**/*.txt' '!node_modules/**'",
+    "prepare": "husky",
+    "precommit": "lint-staged",
+    "markdown:lint": "markdownlint '**/*.md' --ignore node_modules",
+    "markdown:lint:fix": "markdownlint '**/*.md' --ignore node_modules --fix",
     "validate:container-config": "node ./scripts/validate-container-config.mjs"
   }
 }
