style: refactor code style for consistency
- Updated string quotes from single to double in static utilities README and code examples for uniformity.
- Enhanced readability by adding spaces and aligning object properties in mock tests.
- Improved comments and documentation for clarity in both static utilities and mock globals.
- Ensured consistent formatting in validation patterns and usage examples.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -21,7 +21,7 @@
       "@validator": ["src/utils/static/validator.mjs"],
       "@integrationTests/*": ["tests/integration/*"],
       "@mocks/*": ["tests/mocks/*"],
-      "@module": ["module.json"],
+      "@module": ["module.json"]
     }
   },
   "include": ["src/**/*", "tests/**/*"],
