--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,13 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"label": "vitest - OverMyHead tests",
-			"type": "shell",
-			"command": "npm test -- src/overMyHead.unit.test.mjs tests/integration/overMyHead.integration.test.mjs",
-			"isBackground": false,
-			"problemMatcher": [
-				"$eslint-stylish"
-			],
-			"group": "build"
-		}
-	]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "vitest - OverMyHead tests",
+      "type": "shell",
+      "command": "npm test -- src/overMyHead.unit.test.mjs tests/integration/overMyHead.integration.test.mjs",
+      "isBackground": false,
+      "problemMatcher": ["$eslint-stylish"],
+      "group": "build"
+    }
+  ]
 }
