chore: update .gitignore to include additional ignored files
- Added various log files, runtime data, and cache directories to be ignored.
- Included specific entries for build outputs and temporary folders.
- Removed outdated entries related to node_modules, coverage, and dist.
- Update cspell.config.yaml to include specific words for the project

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -11,6 +11,8 @@ dictionaries:
   - npm
 words:
   - datamodel
+  - dependencygraph
   - foundryvtt
+  - stylelintcache
 ignoreWords: []
 import: []
