chore: update dependencies in package.json and package-lock.json
- Add @iarna/toml version 2.2.5 to dependencies
- Add ini version 5.0.0 to dependencies
- Update ini version to 5.0.0 in package-lock.json

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -10,10 +10,12 @@ dictionaries:
   - bash
   - npm
 words:
+  - chatmodes
   - csslint
   - datamodel
   - dependencygraph
   - foundryvtt
+  - iarna
   - stylelintcache
 ignoreWords: []
 import: []
