--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cypress": "^15.0.0",
     "eslint": "^9.36.0",
     "glob": "^11.0.3",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "jsonc-parser": "^3.3.1",
