chore: update extensions recommendations & devcontainer configuration
- Added new recommended VS Code extensions for improved development experience:
  - "jannisx11.batch-rename-extension",
    "anseki.vscode-color",
    "perkovec.emoji",
    "bierner.markdown-emoji"
- Updated devcontainer.json to include new VS Code extensions for a
  consistent environment:
   - github.vscode-github-actions
   - maciejdems.add-to-gitignore
   - mads-hartmann.bash-ide-vscode
   - donjayamanne.githistory
   - yzhang.markdown-all-in-one
   - christian-kohler.npm-intellisense
- Modified cspell.config.yaml to recognise the extensions' author names.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,13 @@
         "vitest.explorer",
         "mhutchie.git-graph",
         "ms-vscode.PowerShell",
-        "PeterSchmalfeldt.explorer-exclude"
+        "PeterSchmalfeldt.explorer-exclude",
+        "github.vscode-github-actions",
+        "maciejdems.add-to-gitignore",
+        "mads-hartmann.bash-ide-vscode",
+        "donjayamanne.githistory",
+        "yzhang.markdown-all-in-one",
+        "christian-kohler.npm-intellisense"
       ],
       "settings": {
         "editor.formatOnSave": true,
