--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -37,7 +37,8 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup Node.js environment
-        uses: ./.github/actions/setup-node
-
-      - name: Install JavaScript dependencies
-        run: npm ci
+        uses: actions/setup-node@v5
+        with:
+          node-version: 22
+          cache: npm
+          cache-dependency-path: package-lock.json
