feat(package): add run-foundry script

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "spellcheck": "cspell '**/*.md' '**/*.txt' '!node_modules/**'",
     "prepare": "husky",
     "precommit": "lint-staged",
+    "run-foundry": "node main.js --dataPath=$HOME/foundrydata",
     "validate:container-config": "node ./.dev/scripts/validation/validate-container-config.mjs"
   },
   "lint-staged": {
