feat(devcontainer): update forwarded ports and run-foundry script
- Removed port 30000 from forwarded ports in devcontainer.json
- Updated run-foundry script in package.json to use new data paths

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
   // "features": {},
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [3000, 8080, 30000],
+  "forwardPorts": [3000, 8080],
 
   // Bind /foundrydata and /foundryvtt
   "mounts": [
