feat: add additional recommended extensions for VSCode
- Added "oderwat.indent-rainbow" to the list of recommended extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "jannisx11.batch-rename-extension",
     "anseki.vscode-color",
     "perkovec.emoji",
-    "bierner.markdown-emoji"
+    "bierner.markdown-emoji",
+    "oderwat.indent-rainbow"
   ]
 }
