feat: Add alias configuration for improved module resolution
- Introduced alias.config.mjs to define path aliases for the project.
- Updated jsconfig.json to include new alias paths.
- Modified package.json to utilize new aliases in imports.
- Refactored vite.config.mjs and vitest.config.mjs to use aliasEntries for alias resolution.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,9 +14,11 @@
       "#data/*": ["src/data/*"],
       "#handlers/*": ["src/handlers/*"],
       "#utils/*": ["src/utils/*"],
+      "#utils/static/*": ["src/utils/static/*"],
       "#listeners/*": ["src/listeners/*"],
       "#maps/*": ["src/maps/*"],
       "#helpers/*": ["src/helpers/*"],
+      "#helpers/pathUtils.mjs": ["src/helpers/pathUtils.mjs"],
       "#configHelpers/*": ["src/config/helpers/*"],
       "#validator": ["src/utils/static/validator.mjs"],
       "#integrationTests/*": ["tests/integration/*"],
