--- a/package.json
+++ b/package.json
@@ -4,6 +4,28 @@
   "description": "A Foundry VTT module to enhance the user interface and experience.",
   "main": "dist/index.js",
   "type": "module",
+  "imports": {
+    "#baseClasses/*": "./src/baseClasses/*",
+    "#config": "./src/config/config.mjs",
+    "#constants": "./src/config/constants.mjs",
+    "#manifest": "./src/config/manifest.mjs",
+    "#configFolder/*": "./src/config/*",
+    "#contexts/*": "./src/contexts/*",
+    "#data/*": "./src/data/*",
+    "#handlers/*": "./src/handlers/*",
+    "#helpers/*": "./src/helpers/*",
+    "#helpers/pathUtils.mjs": "./src/helpers/pathUtils.mjs",
+    "#configHelpers/*": "./src/config/helpers/*",
+    "#docker/*": "./docker/*",
+    "#listeners/*": "./src/listeners/*",
+    "#maps/*": "./src/maps/*",
+    "#utils/*": "./src/utils/*",
+    "#utils/static/*": "./src/utils/static/*",
+    "#validator": "./src/utils/static/validator.mjs",
+    "#integrationTests/*": "./tests/integration/*",
+    "#mocks/*": "./tests/mocks/*",
+    "#module": "./module.json"
+  },
   "author": "Andrea Pandolfo",
   "license": "MIT",
   "devDependencies": {
