chore: Update cspell configuration with new words and ignore list
- Added 'omhrc' to the custom words list.
- Updated ignoreWords to include 'APIKEY'.

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -29,10 +29,12 @@ words:
   - jannisx
   - maciejdems
   - mhutchie
+  - omhrc
   - perkovec
   - Placeables
   - Schmalfeldt
   - stylelintcache
   - yzhang
-ignoreWords: []
+ignoreWords:
+  - APIKEY
 import: []
